--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,10 @@
        in "unidata-releases". The SNAPSHOT version was used in concert with tds-5.0.0-SNAPSHOT, but I have no idea
        when the other 2 were created or for what purpose. Thus, when we're done with the 2.2.X line, I propose that
        we skip over 2.3.X and go straight to 2.4.X or 3.X. That way we can avoid potential conflicts. -->
-	<version>2.3.0-RPS</version>
+	<version>2.4.0-RPS</version>
 
 	<repositories>
+
 		<repository>
 			<id>unidata-releases</id>
 			<name>UNIDATA Releases</name>
@@ -22,6 +23,13 @@
 			<name>UNIDATA Snapshots</name>
 			<url>https://artifacts.unidata.ucar.edu/repository/unidata-snapshots/</url>
 		</repository>
+
+		<repository>
+			<id>mvn-central</id>
+			<name>mvn-central</name>
+			<url>https://repo1.maven.org/maven2/</url>
+		</repository>
+
 	</repositories>
 
 	<dependencies>
@@ -47,6 +55,12 @@
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>${org.apache.commons-lang.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${org.apache.commons.io.version}</version>
 		</dependency>
 
 		<dependency>
@@ -258,6 +272,7 @@
 		<org.slf4j.version>1.7.7</org.slf4j.version>
 
 		<org.apache.commons-lang.version>2.6</org.apache.commons-lang.version>
+		<org.apache.commons.io.version>2.8.0</org.apache.commons.io.version>
 
 		<org.springframework.version>4.3.20.RELEASE</org.springframework.version>
 
